# platform.core.multimedia.mmsvc-sound

./: AUTHORS  CMakeLists.txt  mmsvc-sound.pc.in
muse/: CMakeLists.txt
muse/include/: muse_sound.h  muse_sound_internal.h  muse_sound_msg.h  muse_sound_tone.h
muse/src/: muse_sound_alure.c  muse_sound_canberra.c  muse_sound_dispatcher.c  muse_sound_pulse.c  muse_sound_tone.c
packaging/: mmsvc-sound.spec
